--- a/TrabalhoALG2/relatório.tex
+++ b/TrabalhoALG2/relatório.tex
@@ -32,7 +32,7 @@
 
 \title{Estudo Sistemático de Algoritmos de Busca e Ordenação em Diferentes Contextos}
 
-\author{\IEEEauthorblockN{Felipe Duarte Silva\\ \footnotesize{GRR20231957}}
+\author{\IEEEauthorblockN{Felipe Duarte Silva\\ 
 \textit{Universidade Federal do Paraná -- UFPR}\\
 felipeduarte@ufpr.br}
 
